testing/ui-tests/src/incorrect/need_url_or_path.stderr
error: One of 'runtime_metadata_path' or 'runtime_metadata_url' must be provided
 --> src/incorrect/need_url_or_path.rs:1:1
  |
1 | #[subxt::subxt()]
  | ^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `subxt::subxt` (in Nightly builds, run with -Z macro-backtrace for more info)
